chore: code refactor and test cases